--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -6,4 +6,4 @@
     <li><%= link_to list.name, list_path(list) %></li>
   <% end %>
 </ul>
-<%= link_to "Add list", lists_new_path %>
+<%= link_to "Add list", new_list_path %>
